--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- https://pablobrady.github.io/play-fetch/ -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -21,7 +22,7 @@
       document.getElementById("demo").innerHTML = this.responseText;
     }
   };
-  xhttp.open("GET", "http://www.pbrady.net/index.html", true);
+  xhttp.open("GET", "https://pablobrady.github.io/play-fetch/index.html", true);
   xhttp.send();
 
 </script>
