--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>AJAX / FETCH 1</title>
 </head>
 <body>
-  DATA:  <span id="demo" style="width: 300; padding: 20px; background: #ddd"></span>
+  DATA:  <span id="demo" style="width: 300; padding: 20px; background: red"></span>
 </body>
 
 <script>
