--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       document.getElementById("demo").innerHTML = this.responseText;
     }
   };
-  xhttp.open("GET", "https://pablobrady.github.io/play-fetch/index.html", true);
+  xhttp.open("GET", "https://pablobrady.github.io/play-fetch/sample.dat", true);
   xhttp.send();
 
 </script>
