Basic page layouts

--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- https://pablobrady.github.io/play-fetch/ -->
+  <!-- 
+  https://pablobrady.github.io/play-fetch/ 
+  https://medium.com/letsboot/basics-using-ajax-with-fetch-api-b2218b0b9691
+  -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>AJAX / FETCH 1</title>
+  <title>Reading JSON and other Data</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1>Read JSON Playground</h1>
-  <ul>
-    <li><a href="https://pablobrady.github.io/play-fetch/read1.html">Read via XMLHttpRequest</a></li>
-    <li><a href="https://pablobrady.github.io/play-fetch/read2.html">Read via AJAX</a></li>
-    <li><a href="https://pablobrady.github.io/play-fetch/read3.html">Read via Fetch</a></li>
-  </ul>
+  <h1>Methods of Reading Website Data</h1>
+  <section>
+    <ul>
+      <ol>1. <a href="read1.html">Read via XMLHttpRequest </a></ol>
+      <ol>2. <a href="read2.html">Read via jQuery AJAX ()</a></ol>
+      <ol>3. <a href="read3.html">Read via jQuery AJAX ()</a></ol>
+      <ol>4. <a href="read4.html">Read via Fetch (ES6 Dot syntax)</a></ol>
+      <ol>5. <a href="read5.html">Read via Fetch (ES7 ASYNC/AWAIT syntax )</a></ol>
+    </ul>
+  </section>
 </body>
 </html>
