--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Reading JSON and other Data</title>
+  <title>Methods of Reading Website JSON Data</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1>Methods of Reading Website Data</h1>
+  <h1>Methods of Reading Website JSON Data</h1>
+  <ul class="nav">
+    <li><a href="read1.html">1</a></li>
+    <li><a href="read2.html">2</a></li>
+    <li><a href="read3.html">3</a></li>
+    <li><a href="read4.html">4</a></li>
+    <li><a href="read5.html">5</a></li>
+  </ul>
   <section>
     <ul>
       <ol>1. <a href="read1.html">Read via XMLHttpRequest </a></ol>
