--- a/read3.html
+++ b/read3.html
@@ -13,6 +13,14 @@
 </head>
 <body>
   <h1>Read via JQuery AJAX ('get' style):</h1>
+  <ul class="nav">
+    <li><a href="read1.html">1</a></li>
+    <li><a href="read2.html">2</a></li>
+    <li><a href="read3.html">3</a></li>
+    <li><a href="read4.html">4</a></li>
+    <li><a href="read5.html">5</a></li>
+  </ul>
+  
   <pre class="codeFormatting">
       $.get('data/simpleMenu.json').done(function(data) {
         document.getElementById("demo").innerHTML = data;
