--- a/read2.html
+++ b/read2.html
@@ -12,6 +12,14 @@
 </head>
 <body>
   <h1>Read via JQuery AJAX (object style):</h1>
+  <ul class="nav">
+    <li><a href="read1.html">1</a></li>
+    <li><a href="read2.html">2</a></li>
+    <li><a href="read3.html">3</a></li>
+    <li><a href="read4.html">4</a></li>
+    <li><a href="read5.html">5</a></li>
+  </ul>
+  
   <pre class="codeFormatting">
       $.ajax({
         type: 'GET',
