--- a/read4.html
+++ b/read4.html
@@ -9,6 +9,14 @@
 </head>
 <body>
   <h1>Read via Fetch (ES6 Dot syntax):</h1>
+  <ul class="nav">
+    <li><a href="read1.html">1</a></li>
+    <li><a href="read2.html">2</a></li>
+    <li><a href="read3.html">3</a></li>
+    <li><a href="read4.html">4</a></li>
+    <li><a href="read5.html">5</a></li>
+  </ul>
+
   <pre class="codeFormatting">
       fetch('data/simpleMenu.json')
       .then(data => console.log(data))
