Menu fix; All JS works

--- a/index.html
+++ b/index.html
@@ -12,21 +12,24 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1>Methods of Reading Website JSON Data</h1>
-  <ul class="nav">
-    <li><a href="read1.html">1</a></li>
-    <li><a href="read2.html">2</a></li>
-    <li><a href="read3.html">3</a></li>
-    <li><a href="read4.html">4</a></li>
-    <li><a href="read5.html">5</a></li>
-  </ul>
+  <header>
+    <h1>Reading Website Data <b>with JavaScript</b></h1>
+    <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="read1.html">1</a></li>
+      <li><a href="read2.html">2</a></li>
+      <li><a href="read3.html">3</a></li>
+      <li><a href="read4.html">4</a></li>
+      <li><a href="read5.html">5</a></li>
+    </ul>
+  </header>
   <section>
     <ul>
       <ol>1. <a href="read1.html">Read via XMLHttpRequest </a></ol>
-      <ol>2. <a href="read2.html">Read via jQuery AJAX ()</a></ol>
-      <ol>3. <a href="read3.html">Read via jQuery AJAX ()</a></ol>
+      <ol>2. <a href="read2.html">Read via jQuery AJAX ('object' style)</a></ol>
+      <ol>3. <a href="read3.html">Read via jQuery AJAX ('.get' style)</a></ol>
       <ol>4. <a href="read4.html">Read via Fetch (ES6 Dot syntax)</a></ol>
-      <ol>5. <a href="read5.html">Read via Fetch (ES7 ASYNC/AWAIT syntax )</a></ol>
+      <ol>5. <a href="read5.html">Read via Fetch (ES7 Async/Await syntax )</a></ol>
     </ul>
   </section>
 </body>
