--- a/read1.html
+++ b/read1.html
@@ -8,14 +8,17 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1>Read via XMLHttpRequest:</h1>
-  <ul class="nav">
-    <li><a href="read1.html">1</a></li>
-    <li><a href="read2.html">2</a></li>
-    <li><a href="read3.html">3</a></li>
-    <li><a href="read4.html">4</a></li>
-    <li><a href="read5.html">5</a></li>
-  </ul>
+  <header>
+      <h1>Reading Website Data with <b>XMLHttpRequest</b></h1>
+    <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="read1.html">1</a></li>
+      <li><a href="read2.html">2</a></li>
+      <li><a href="read3.html">3</a></li>
+      <li><a href="read4.html">4</a></li>
+      <li><a href="read5.html">5</a></li>
+    </ul>
+  </header>
   
   <pre class="codeFormatting">
       var xhttp = new XMLHttpRequest();
