--- a/read5.html
+++ b/read5.html
@@ -4,18 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Read via Fetch (es6)</title>
+  <title>Read via Fetch (eES7 Async/Await)</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1>Read via Fetch (ES7 ASYNC/AWAIT syntax ):</h1>
-  <ul class="nav">
-    <li><a href="read1.html">1</a></li>
-    <li><a href="read2.html">2</a></li>
-    <li><a href="read3.html">3</a></li>
-    <li><a href="read4.html">4</a></li>
-    <li><a href="read5.html">5</a></li>
-  </ul>
+  <header>
+    <h1>Reading Website Data with <b>Fetch Async/Await (ES7)</b></h1>
+    <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="read1.html">1</a></li>
+      <li><a href="read2.html">2</a></li>
+      <li><a href="read3.html">3</a></li>
+      <li><a href="read4.html">4</a></li>
+      <li><a href="read5.html">5</a></li>
+    </ul>
+  </header>
   
   <pre class="codeFormatting">
       async function doAjax() {
@@ -30,18 +33,18 @@
       doAjax();
   </pre>
 
-  <span id="output" style="background: steelblue; color: white;"></span>
+  <div id="output" style="background: steelblue; color: white;"></div>
 
 
   <script>
-    // Fetch (ES7 ASYNC/AWAIT syntax ):
+    // Fetch (ES7 Async/Await):
     async function doAjax() {
       try {
           const res = await fetch('data/simpleMenu.json');
           const data = await res.text();
-          document.getElementById("demo").innerHTML = data;
+          document.getElementById("output").innerHTML = JSON.stringify( data );
       } catch (error) {
-        document.getElementById("demo").innerHTML = 'Error: ' + data;
+        document.getElementById("output").innerHTML = 'Error: ' + JSON.stringify( data );
       }
     }
     doAjax();
