--- a/read2.html
+++ b/read2.html
@@ -32,6 +32,7 @@
           document.getElementById("output").innerHTML = data.menu;
         },
         fail: function(error) {
+          console.error("Error: " + error)
           document.getElementById("output").innerHTML = error;
         }
       })
