Numbers on Header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <h1>Reading Website Data <b>with JavaScript</b></h1>
+    <h1>Reading Website Data with <b>JavaScript</b></h1>
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="read1.html">1</a></li>
@@ -25,11 +25,11 @@
   </header>
   <section>
     <ul>
-      <ol>1. <a href="read1.html">Read via XMLHttpRequest </a></ol>
-      <ol>2. <a href="read2.html">Read via jQuery AJAX ('object' style)</a></ol>
-      <ol>3. <a href="read3.html">Read via jQuery AJAX ('.get' style)</a></ol>
-      <ol>4. <a href="read4.html">Read via Fetch (ES6 Dot syntax)</a></ol>
-      <ol>5. <a href="read5.html">Read via Fetch (ES7 Async/Await syntax )</a></ol>
+      <ol>1. <a href="read1.html">Reading Website Data with <b>XMLHttpRequest</b></a></ol>
+      <ol>2. <a href="read2.html">Reading Website Data with <b>jQuery AJAX object</b></a></ol>
+      <ol>3. <a href="read3.html">Reading Website Data with <b>jQuery AJAX .get</b></a></ol>
+      <ol>4. <a href="read4.html">Reading Website Data with <b>Fetch dot syntax (ES6)</b></a></ol>
+      <ol>5. <a href="read5.html">Reading Website Data with <b>Fetch Async/Await (ES7)</b></a></ol>
     </ul>
   </section>
 </body>
