--- a/read2.html
+++ b/read2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Read via jQuery AJAX (object style)</title>
+  <title>Read via jQuery AJAX object</title>
   <link rel="stylesheet" href="css/main.css">
   <script src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1>Reading Website Data with a <b>JQuery AJAX Object</b></h1>
+    <h1>2. Reading Website Data with a <b>JQuery AJAX object</b></h1>
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="read1.html">1</a></li>
