--- a/read4.html
+++ b/read4.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Reading Website Data with <b>Fetch dot syntax (ES6)</b></h1>
+    <h1>4. Reading Website Data with <b>Fetch dot syntax (ES6)</b></h1>
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="read1.html">1</a></li>
