--- a/read1.html
+++ b/read1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-      <h1>Reading Website Data with <b>XMLHttpRequest</b></h1>
+      <h1>1. Reading Website Data with <b>XMLHttpRequest</b></h1>
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="read1.html">1</a></li>
