--- a/read3.html
+++ b/read3.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <h1>Reading Website Data with <b>JQuery AJAX .get</b></h1>
+    <h1>3. Reading Website Data with <b>JQuery AJAX .get</b></h1>
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="read1.html">1</a></li>
