--- a/read5.html
+++ b/read5.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Reading Website Data with <b>Fetch Async/Await (ES7)</b></h1>
+    <h1>5. Reading Website Data with <b>Fetch Async/Await (ES7)</b></h1>
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="read1.html">1</a></li>
